--- a/css/style.css
+++ b/css/style.css
@@ -137,11 +137,12 @@ img {
 .hero__section {
     background-image:url(../image/background-main.jpg);
     padding-top: 191px;
-    padding-bottom: 204px;
+    padding-bottom: 100px;
     background-repeat: no-repeat;
-    /* background-size: cover; */
+    background-size: cover;
+    min-height: 604px;
     color: #fff;
-    margin-bottom: 18px;
+    margin-bottom: 79px;
 }
 .hero__section-title {
     font-size: 48px;
@@ -182,6 +183,12 @@ img {
     width: 100%;
     padding: 25px 30px;
     text-align: center;
+}
+.card__visual img {
+    transition: 0.8s;
+}
+.card__visual img:hover {
+    transform: scale(1.2);
 }
 .card__visual {
     max-width: 125px;
@@ -340,33 +347,36 @@ tr {
 }
 .footer__contact-list {
     display: inline-block;
+    text-align: center;
 }
 .footer__contact-list a {
-    display: block;
+    display: inline-block;
     width: 100%;
     height: 100%;
     line-height: 40px;
     text-decoration: none;
+    color: #F13C6E;
 }
 .footer__contact-item {
-    display: block;
     width: 45px;
     height: 45px;
     border: solid 2px #F13C6E;
     border-radius: 50%;
-    text-align: center;
     font-size: 16px;
     display: inline-block;
     margin-right: 16px;
+    overflow: hidden;
+    text-align: center;
 }
-.footer__contact-item:hover {
-    border-radius: 40%;  
+.footer__contact-item a:hover,
+.footer__contact-item:hover{
+    color: #fff;
+    background-color: #F13C6E;  
 }
 .footer__main-btn {
     padding-bottom:  10px;
     font-size: 14px;
     line-height: 16px;
-    border-radius: ;
     background-color: #F13C6E;
     color: #fff;
     border: solid 2px #fff;
