--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ img {
 }
 .header__main .container,
 .footer__contact .container {
+    overflow: hidden;
     text-align: justify;
     line-height: 0;
 }
@@ -76,15 +77,6 @@ img {
     display: inline-block;
     line-height: 1;
 }
-.header__main-box .btn {
-    vertical-align: middle;
-}
-.header__main-btn {
-    background-color: #fff;
-    color: #000;
-    border: solid 2px #F13C6E;
-    transition: background-color 1s, color 0.5s;
-}
 .btn {
     font-size: 14px;
     font-weight: 400;
@@ -92,13 +84,38 @@ img {
     padding: 10px 26px;
     border-radius: 40px;
     display: inline-block;
-    vertical-align: top;
     text-decoration: none;
-    transition: background-color 1s, color 0.5s;
-}
-.btn:hover {
-    background: #F13C6E;
     color: #fff;
+    transition: background-color 1s, color 0.5s;
+    background-color: #F13C6E;
+    border: solid 2px #fff ;
+}
+.btn__small {
+padding: 9px 40px;
+}
+.btn__small:hover{
+   background-color: #fff;
+   color: #000;
+   border-color: #F13C6E; 
+}
+.btn__white {
+background-color: #fff;
+border-color: #F13C6E;
+color: #000;
+}
+.btn__white:hover{
+   background-color: #F13C6E;
+   color: #fff; 
+}
+.btn__constant-width{
+    display: block;
+    width: 170px;
+    text-align: center;
+}
+.btn__constant-width:hover{
+    background-color: #fff;
+    border-color: #fff;
+    color: #F13C6E;
 }
 .tel {
     font-size: 16px;
@@ -121,25 +138,13 @@ img {
 .header__bar .menu > li {
     padding: 0 20px;
 }
-.hero__section-btn {
-    background-color: #F13C6E;
-    color: #fff;
-    border: solid 2px #fff;
-    padding: 10px 43px;
-    letter-spacing: 0.8px;
-    transition: background-color 1s, color 0.5s;
-}
-.hero__section-btn:hover {
-    background-color: #fff;
-    color: #000;
-    border: solid 2px #F13C6E;
-}
 .hero__section {
     background-image:url(../image/background-main.jpg);
     padding-top: 191px;
     padding-bottom: 100px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 50% 50%;
     min-height: 604px;
     color: #fff;
     margin-bottom: 79px;
@@ -194,7 +199,7 @@ img {
     max-width: 125px;
     max-height: 166px;
     display: inline-block;
-    margin-bottom: 20px;
+    margin-bottom: 19px;
 }
 .content__centr {
     margin-bottom: 20px;
@@ -208,18 +213,6 @@ img {
     font-weight: 500;
     line-height: 25px;
     letter-spacing: calc(1em / 20);
-}
-.product__cards .btn {
-    background-color: #F13C6E;
-    color: #fff;
-    border: solid 2px #fff;
-    padding: 9px 40px 8px;
-    letter-spacing: calc(1em / 20);
-}
-.product__cards .btn:hover {
-    background-color: #fff;
-    border: solid 2px #F13C6E;
-    color: #F13C6E;
 }
 .section__shop-promotion {
     margin-bottom: 100px;
@@ -235,11 +228,11 @@ img {
 }
 .promotion__cards-box {
     background-color: #F13C6E;
-    padding: 33px 45px 35px 40px;
+    padding: 33px 45px 31px 40px;
     overflow: hidden;
 }
 .shop__promotion-content {
-   float: left;
+    float: left;
     color: #fff;  
 }
 .content__one {
@@ -256,27 +249,15 @@ img {
     letter-spacing: -0.5px;
 }
 .shop__promotion-content p {
-    margin-bottom: 27px;  
+    margin-bottom: 28px;  
 }
 .shop__promotion-img {
     font-size: 100px;
     float: right;
-    padding: 16px 0;  
+    padding: 20px 0;  
 }
 .content__two p {
     width: 141px;
-}
-.shop__promotion-btn {
-    background-color: #F13C6E;
-    color: #fff;
-    border: solid 2px #fff;
-    padding: 7px 28px;
-}
-.shop__promotion-btn:hover,
-.footer__main-btn:hover {
-    background-color: #fff;
-    border: solid 2px #F13C6E;
-    color: #F13C6E;
 }
 #email {
     width: 225px;
@@ -347,7 +328,7 @@ tr {
 }
 .footer__contact {
     background-color: #fff;
-    padding: 37px 0 38px;
+    padding: 37px 0;
 }
 .footer__contact-list {
     display: inline-block;
@@ -379,16 +360,8 @@ tr {
 .footer__contact-item a:hover{
     color: #fff;   
 }
-.footer__main-btn {
-    padding-bottom:  10px;
-    font-size: 14px;
-    line-height: 16px;
-    background-color: #F13C6E;
-    color: #fff;
-    border: solid 2px #fff;
-    padding: 13px 27px;
-    border-radius: 40px;
-    transition: background-color 1s, color 0.5s;
+.footer__main-box{
+    float: right;
 }
 .footer__main-box a{
     text-decoration: none;
